@@ -1,0 +1,9 @@
+Title: fileinfo.groups: Added missing metric information
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p23
+Date: 1494603823
+Class: fix
+
+
